# LLMOps

./: .gitignore  main.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: aws.yaml  ci.yaml  task_defination.json
multi_doc_chat/src/document_chat/: retrieval.py
multi_doc_chat/src/document_ingestion/: data_ingestion.py
multi_doc_chat/utils/: document_ops.py  file_io.py  model_loader.py
test/: conftest.py
