[project]
name = "llmops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docx2txt>=0.9",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.119.1",
    "ipykernel>=7.0.1",
    "jinja2>=3.1.6",
    "langchain>=1.0.1",
    "langchain-community>=0.4",
    "langchain-core>=1.0.0",
    "langchain-google-genai>=3.0.0",
    "langchain-groq>=1.0.0",
    "langchain-openai>=1.0.0",
    "langsmith>=0.4.37",
    "openai>=2.6.0",
    "pandas>=2.3.3",
    "pypdf>=6.1.3",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "structlog>=25.4.0",
    "uvicorn>=0.38.0",
]
